--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,61 +1,23 @@
 [project]
-name = "jupyter-env"
+name = "finetuning-env"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
-    "accelerate>=1.3.0",
-    "autoawq>=0.2.7.post3",
-    "bitsandbytes>=0.45.1",
-    "bs4>=0.0.2",
-    "colorama>=0.4.6",
-    "datasets>=3.2.0",
-    "device-smi>=0.3.3",
-    "docling>=2.15.1",
-    "exllamav2>=0.2.7",
-    "fastapi[standard]>=0.115.8",
-    "flash-attn>=2.7.4.post1",
-    "hf-transfer>=0.1.9",
-    "huggingface-hub[cli]>=0.28.1",
-    "ipywidgets>=8.1.5",
-    "jupyter-contrib-nbextensions>=0.7.0",
-    "jupyter-nbextensions-configurator>=0.6.4",
-    "jupyter-server-proxy>=4.4.0",
-    "jupyterhub>=5.2.1",
-    "jupyterlab>=4.3.5",
-    "langchain>=0.3.18",
-    "langchain-community>=0.3.17",
-    "langchain-huggingface>=0.1.2",
-    "liger-kernel>=0.5.2",
-    "loralib>=0.1.2",
-    "lxml[html-clean]>=5.3.0",
-    "matplotlib>=3.10.0",
-    "nbconvert>=7.16.6",
-    "ninja>=1.11.1.3",
-    "numpy>=2.2.2",
-    "openpyxl>=3.1.5",
-    "optimum>=1.24.0",
-    "pandas>=2.2.3",
-    "peft>=0.14.0",
-    "pip>=25.0.1",
-    "polars>=1.21.0",
-    "readability-lxml>=0.8.1",
-    "requests>=2.32.3",
-    "scipy>=1.15.1",
-    "seaborn>=0.13.2",
-    "sentence-transformers>=3.4.1",
-    "spacy>=3.8.4",
-    "staticvectors>=0.2.0",
-    "tantivy>=0.22.0",
-    "tensorboardx>=2.6.2.2",
-    "tokenicer>=0.0.2",
-    "torch>=2.6.0",
+    "bitsandbytes>=0.47.0",
+    "flash-attn>=2.8.3",
+    "ipykernel>=6.30.1",
+    "ipython>=9.5.0",
+    "ipywidgets>=8.1.7",
+    "jupyter>=1.1.1",
+    "liger-kernel>=0.6.2",
+    "matplotlib>=3.10.6",
+    "pandas>=2.3.2",
+    "peft>=0.17.1",
+    "sentence-transformers>=5.1.1",
     "tqdm>=4.67.1",
-    "transformers==4.48.2",
-    "trl[peft]>=0.14.0",
-    "txtai>=8.3.0",
-    "unsloth>=2024.8",
-    "vllm>=0.1.2",
-    "xformers>=0.0.29.post3",
+    "transformers>=4.56.2",
+    "trl>=0.23.0",
+    "unsloth>=2025.9.5",
 ]
