--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,24 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "autoawq>=0.2.9",
     "bitsandbytes>=0.47.0",
+    "docling>=2.54.0",
+    "einops>=0.8.1",
+    "exllamav2>=0.3.2",
     "flash-attn>=2.8.3",
-    "ipykernel>=6.30.1",
+    "ipykernel==6.30.1",
     "ipython>=9.5.0",
     "ipywidgets>=8.1.7",
     "jupyter>=1.1.1",
     "liger-kernel>=0.6.2",
     "matplotlib>=3.10.6",
+    "mineru-vl-utils[transformers]>=0.1.14",
     "pandas>=2.3.2",
     "peft>=0.17.1",
+    "pip>=25.3",
     "sentence-transformers>=5.1.1",
+    "spacy>=3.8.7",
     "tqdm>=4.67.1",
     "transformers>=4.56.2",
     "trl>=0.23.0",
