--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,9 @@ dependencies = [
     "trl>=0.23.0",
     "unsloth>=2025.9.5",
 ]
+
+[tool.uv.extra-build-dependencies]
+flash-attn = [{ requirement = "torch", match-runtime = true }]
+
+[tool.uv.extra-build-variables]
+flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
